# Zig-PDF-Parser

./: .gitignore  AGENTS.md  NOTICE.md  README.md  build.zig  gen_test.zig
.github/workflows/: ci.yml  deploy.yml
benchmark/: .gitignore  README.md
benchmark/eval/: README.md  analyze_baseline.py  compare.py  fetch_large_corpus.py  font_compare.py  ocr_form_quality.py  profile_lanes.py  render_oracle.py  run_baseline.py  structural_compare.py  table_compare.py  test_benchmark_hygiene.py  test_table_compare.py  thresholds.json
benchmark/eval/corpus/: manifest.tsv  metadata.jsonl
benchmark/eval/large/: README.md  manifest.tsv  metadata.jsonl  sources.tsv
docs/: output-schema.md
include/: pdf_parser.h
python/: README.md  pyproject.toml
python/tests/: test_zpdf.py
python/zpdf/: __init__.py  _cdef.h  _ffi.py
src/: adapter.zig  adaptive.zig  agl.zig  bench.zig  benchmark_runner.zig  capi.zig  cff.zig  cff_std_strings.zig  complexity.zig  decompress.zig  encoding.zig  encryption.zig  eval.zig  eval_corpus_writer.zig  eval_runner.zig  extraction_diagnostics.zig  font_mapping.zig  integration_test.zig  interpreter.zig  layout.zig  legacy_font_mapping.zig  main.zig  markdown.zig  native_eval.zig  native_layout.zig  ocr.zig  pagetree.zig  parser.zig  reconcile.zig  root.zig  runtime.zig  schema.zig  server.zig  specialist_protocol.zig  specialists.zig  stream.zig  structural.zig  testpdf.zig  visual_assets.zig  wapi.zig  (+1 more)
src/ocr/: tesseract_c.zig  tesseract_c_ffi.zig  tesseract_cli.zig  tesseract_tsv.zig  types.zig
web/: index.html
(+65 files in other folders)
